--- a/root-config/src/microfrontend-layout.html
+++ b/root-config/src/microfrontend-layout.html
@@ -21,27 +21,17 @@
     <route default>
       <div>
         <h1>Welcome to the Single-SPA Ecosystem</h1>
-        <p>
-          This is the single-spa ecosystem layout.
-          <br />
-          <br />
-          To learn more about the ecosystem, see the
-          <a href="https://single-spa.js.org/docs/ecosystem">ecosystem documentation</a>.
-        </p>
       </div>
       <div>
         <application name="@serve:single-spa:mf-emitter"></application>
       </div>
-      <div>
-        <application name="@serve:single-spa:mf-receiver"></application>
-      </div>
     </route>
-    <route path="storybook">
+    <route path="receiver">
       <div>
         <h1>Storybook</h1>
       </div>
       <div>
-        <application name="@serve:single-spa:mf-component-library"></application>
+        <application name="@serve:single-spa:mf-receiver"></application>
       </div>
     </route>
   </main>
