--- a/mf-nav/src/index.html
+++ b/mf-nav/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <mf-nav></mf-nav>
 </body>
 </html>
