--- a/root-config/src/microfrontend-layout.html
+++ b/root-config/src/microfrontend-layout.html
@@ -28,7 +28,7 @@
     </route>
     <route path="emitter">
       <div>
-        <h1>Storybook</h1>
+        <h2>This is the emitter</h2>
       </div>
       <div>
         <application name="@ess:single-spa:mf-emitter"></application>
@@ -36,7 +36,7 @@
     </route>
     <route path="receiver">
       <div>
-        <h1>Storybook</h1>
+        <h2>This is the receiver</h2>
       </div>
       <div>
         <application name="@ess:single-spa:mf-receiver"></application>
